fl#valid_tests/tests/invalid/cre.tpa
DEFINE_ACTION_FUNCTION fl#valid_tests#tests#invalid#cre
  RET
    success
    fail
    failed_invalidity_tests
BEGIN
  OUTER_SPRINT file_root "%MOD_FOLDER%/tests/invalid/cre"

  ACTION_DEFINE_ASSOCIATIVE_ARRAY invalid#cre BEGIN
    "nosig" => "Plain CRE V1.0 with erased signature and version"
    "null"  => "File of zero length"
    "nover" => "Plain CRE V1.0 with erased version"
    "dmghd" => "Plain CRE V1.0 with deleted item slots and 0x20 bytes deleted at offset 0x10"
    "0off"  => "Plain CRE V1.0 with zeroed effect offset and 0 effects"
    "wrngoff" => "Plain CRE V1.0 with 0xc deducted from offset at 0x2a8"
    "wrngoff2" => "Plain CRE V1.0 with 0x10c added to effects offset; 0 effects"
    "aataqah1" => "Valid Aataqah with incorrctly updated offsets; no effects, but effects offset is 0x46c when it should be 0x480"
    "aataqah2" => "aataqah1 with 1 effect added; no prior reindexing of the structure; structure overlap and unreferenced bytes, but a correct number of bytes"
  END

  ACTION_PHP_EACH invalid#cre AS file => desc BEGIN
    LAF test_invalid
      STR_VAR
        file = EVAL "%file_root%/%file%.cre"
        desc
      RET
        success
        fail
        failed_invalidity_tests
    END
  END
END

LAF fl#valid_tests#tests#invalid#cre RET success fail failed_invalidity_tests END
